--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="container">
             <h1>Dashboard Estratégico CREA Jr</h1>
-            <p class="period">Período de Análise: 2023-2025</p>
+            <p class="period">Período de Análise: 01 - 09/2025</p>
         </div>
     </header>
 
