--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="container">
             <h1>Dashboard Estratégico CREA Jr</h1>
-            <p class="period">Período de Análise: 01 - 09/2025</p>
+            <p class="period">Período de Análise: Jan - Set/2025</p>
         </div>
     </header>
 
@@ -88,7 +88,7 @@
             </div>
 
             <div class="inactive-states">
-                <h3>⚠️ Estados Sem Dados (Oportunidades Estratégicas)</h3>
+                <h3>⚠️ Estados Sem Dados</h3>
                 <div class="inactive-states-grid">
                     <div class="inactive-state">Alagoas</div>
                     <div class="inactive-state">Amapá</div>
@@ -181,7 +181,7 @@
                     <ul>
                         <li><strong>São Paulo:</strong> Maior potencial de mercado, sem dados</li>
                         <li><strong>Rio de Janeiro:</strong> Segunda economia do país, ausente</li>
-                        <li><strong>Bahia:</strong> Grande população estudantil de engenharia</li>
+                        <li><strong>Bahia:</strong> Grande potencial</li>
                         <li><strong>Paraná:</strong> Estado industrial forte, sem representação</li>
                     </ul>
                 </div>
@@ -211,7 +211,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Dashboard Estratégico CREA Jr. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Dashboard Estratégico CREA Jr. por Victinho do Agro S2.</p>
         </div>
     </footer>
 
