--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="container">
             <h1>Dashboard Estratégico CREA Jr - Análise Completa</h1>
             <div class="header-info">
-                <p class="period">Período: 2023-2025</p>
+                <p class="period">Período: Jan-Set 2025</p>
                 <div class="update-indicator">
                     <span class="update-badge">⚠️ Atualização Parcial</span>
                     <span class="last-update">Última atualização: 22:20</span>
@@ -292,7 +292,7 @@
                         </div>
                     </div>
                     <div class="state-category">
-                        <h4>⚠️ Situação Especial (4)</h4>
+                        <h4>⚠️ Situação Especial (3)</h4>
                         <div class="special-states">
                             <div class="special-state">
                                 <span class="state-name">Alagoas</span>
@@ -302,11 +302,7 @@
                                 <span class="state-name">Amapá</span>
                                 <span class="state-reason">Não tem CREA Jr</span>
                             </div>
-                            <div class="special-state">
-                                <span class="state-name">Rio de Janeiro</span>
-                                <span class="state-reason">Reestruturando</span>
-                            </div>
-                            <div class="special-state">
+                                        <div class="special-state">
                                 <span class="state-name">São Paulo</span>
                                 <span class="state-reason">Não tem CREA Jr</span>
                             </div>
