--- a/index.html
+++ b/index.html
@@ -280,13 +280,14 @@
                         <div class="active-states" id="activeStatesList"></div>
                     </div>
                     <div class="state-category">
-                        <h4>⏳ Estados Pendentes (7)</h4>
+                        <h4>⏳ Estados Pendentes (9)</h4>
                         <div class="pending-states">
-                            <span class="state-tag">Bahia</span>
+                            <span class="state-tag">Bahia (Caso Especial)</span>
                             <span class="state-tag">Mato Grosso do Sul</span>
-                            <span class="state-tag">Paraná</span>
+                            <span class="state-tag">Paraná (Caso Especial)</span>
                             <span class="state-tag">Paraíba</span>
                             <span class="state-tag">Pernambuco</span>
+                            <span class="state-tag">Rio de Janeiro</span>
                             <span class="state-tag">Rio Grande do Sul</span>
                             <span class="state-tag">Tocantins</span>
                         </div>
