--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Estratégico CREA Jr - Análise Completa</title>
+    <title>Dashboard Gestão Estratégica - CREA Jr</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -437,7 +437,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Dashboard Estratégico CREA Jr. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Dashboard Estratégico do CREA Jr. By: Victinho do Agro.</p>
         </div>
     </footer>
 
