--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <h1>Dashboard Estratégico CREA Jr - Análise Completa</h1>
+            <h1>Dashboard de Gestão Estratégica do CREA Jr</h1>
             <div class="header-info">
                 <p class="period">Período: Jan-Set 2025</p>
                 <div class="update-indicator">
