--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DASHBOARD SOEA-25 - Análise Completa por Estado</title>
+    <title>DASHBOARD CREA JÚNIOR 2025 - Análise por Estado</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -496,7 +496,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 CREA Jr - DASHBOARD SOEA-25. Versão 6.0 | Processado em 07/10/2025 às 06:25 | Todos os dados completos carregados</p>
+            <p>&copy; 2025 CREA Jr. Versão 6.0 | Processado em 07/10/2025 às 06:25 | Todos os dados completos carregados</p>
         </div>
     </footer>
 
