--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <h1>DASHBOARD SOEA-25</h1>
+            <h1>DASHBOARD CREA JÚNIOR 2025</h1>
             <p class="period">Análise Completa | Janeiro a Outubro 2025 | 19 Estados Ativos | 2.647 Eventos</p>
         </div>
     </header>
